rancher/production/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: production
spec:
  ingressClassName: nginx
  rules:
    - host: www.tlsdemo.net
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
            path: /
